--- a/client/src/main/resources/ru/adel/client/cloud-storage.fxml
+++ b/client/src/main/resources/ru/adel/client/cloud-storage.fxml
@@ -1,13 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.adel.client.controller.CloudStorageController">
-   <bottom>
-       <AnchorPane prefHeight="40.0" prefWidth="640.0" BorderPane.alignment="CENTER">
-           <Button layoutX="574.0" layoutY="7.0" mnemonicParsing="false" onAction="#onButtonClick" text="Exit" AnchorPane.rightAnchor="14.0" />
-       </AnchorPane>
-   </bottom>
-</BorderPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" spacing="10.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.adel.client.controller.CloudStorageController">
+    <children>
+        <HBox prefHeight="480.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
+            <children>
+                <VBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="380.0" prefWidth="140.0" spacing="30.0">
+                    <children>
+                  <ProgressBar prefHeight="18.0" prefWidth="101.0" progress="0.18" />
+                        <Button onAction="#onUploadButtonClick" mnemonicParsing="false" prefWidth="100.0" text="Upload &gt;&gt;" />
+                        <Button onAction="#onDownloadButtonClick" mnemonicParsing="false" prefWidth="100.0" text="&lt;&lt; Download" />
+                        <Button onAction="#onCopyButtonClick" mnemonicParsing="false" prefWidth="100.0" text="Copy" />
+                        <Button onAction="#onPasteButtonClick" mnemonicParsing="false" prefWidth="100.0" text="Paste" />
+                        <Button onAction="#onDeleteButtonClick" mnemonicParsing="false" prefWidth="100.0" text="Delete" />
+                    </children>
+                </VBox>
+                <VBox prefHeight="480.0" prefWidth="250.0" spacing="10.0" HBox.hgrow="ALWAYS">
+                    <children>
+                        <HBox alignment="BOTTOM_CENTER" prefHeight="40.0" prefWidth="250.0" spacing="10.0">
+                            <children>
+                                <TextField fx:id="cloudStoragePath" editable="false" HBox.hgrow="ALWAYS">
+                                    <HBox.margin>
+                                        <Insets />
+                                    </HBox.margin>
+                                </TextField>
+                                <Button mnemonicParsing="false" prefWidth="50.0" text="Back">
+                                    <HBox.margin>
+                                        <Insets />
+                                    </HBox.margin>
+                                </Button>
+                            </children>
+                        </HBox>
+                        <ListView fx:id="cloudStorageFiles" prefHeight="360.0" prefWidth="250.0" VBox.vgrow="ALWAYS">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin></ListView>
+                    </children>
+                </VBox>
+            </children>
+        </HBox>
+        <HBox alignment="CENTER_RIGHT" prefHeight="40.0" prefWidth="640.0">
+            <children>
+                <Button mnemonicParsing="false" onAction="#onExitButtonClick" prefWidth="100.0" text="Exit" />
+            </children>
+        </HBox>
+    </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
+</VBox>
